# svelte-tauri

./: .gitignore  .gitmodules  README.md  create-custom-js-modules.sh
frontend/: Cargo.toml  run_gen_types.sh
frontend/native/app/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  teee.txt
frontend/native/app/capabilities/: cloudcad-account.json  cloudcad-editor.json  cognito-login.json  cognito-signup.json  migrated.json
frontend/native/app/capabilities/schemas/: capabilities.json  macOS-schema.json  plugin-manifests.json
frontend/native/app/icons/: icon.icns
frontend/native/app/src/: lib.rs  main.rs  ui_logger.rs
frontend/native/plugins/common/: Cargo.toml
frontend/native/plugins/common/src/: lib.rs
frontend/native/plugins/common/src/dto_util/: mod.rs  update_ag_dto_from_status.rs
frontend/native/plugins/common/src/error/: mod.rs
frontend/native/plugins/common/src/events/: bearer_token_event.rs  commit_info_event.rs  mod.rs
frontend/native/plugins/common/src/notifying_sync/: mod.rs  notify_rw_lock.rs  notifying_state.rs
frontend/native/plugins/common/src/states/: ag_commit_state.rs  mod.rs
frontend/native/plugins/common/src/ts_bindings/: mod.rs
frontend/native/plugins/common/src/types/: account_dto_state.rs  commit_info.rs  mod.rs  repo_detail_state.rs
frontend/native/plugins/tauri-plugin-account-client/: README.md
frontend/native/plugins/tauri-plugin-account-client/.changes/: config.json  initial-release.md  readme.md
frontend/native/plugins/tauri-plugin-account-client/.github/workflows/: audit.yml  covector-version-or-publish.yml
frontend/native/plugins/tauri-plugin-account-client/rust/: Cargo.toml  build.rs
frontend/native/plugins/tauri-plugin-account-client/rust/permissions/: default.toml
frontend/native/plugins/tauri-plugin-account-client/rust/src/: lib.rs
frontend/native/plugins/tauri-plugin-cognito-login/: README.md
frontend/native/plugins/tauri-plugin-cognito-login/.changes/: config.json  initial-release.md  readme.md
frontend/native/plugins/tauri-plugin-cognito-login/.github/workflows/: audit.yml  clippy.yml  format.yml
frontend/native/plugins/tauri-plugin-cognito-login/rust/: Cargo.toml  build.rs
frontend/native/plugins/tauri-plugin-cognito-login/rust/permissions/: default.toml
frontend/native/plugins/tauri-plugin-cognito-login/rust/src/: lib.rs
frontend/native/plugins/tauri-plugin-cognito-sign-up/: README.md
frontend/native/plugins/tauri-plugin-cognito-sign-up/.changes/: config.json  initial-release.md  readme.md
frontend/native/plugins/tauri-plugin-cognito-sign-up/.github/workflows/: test.yml
frontend/native/plugins/tauri-plugin-cognito-sign-up/rust/: Cargo.toml  build.rs
frontend/native/plugins/tauri-plugin-cognito-sign-up/rust/permissions/: default.toml
frontend/native/plugins/tauri-plugin-cognito-sign-up/rust/src/: lib.rs
frontend/native/plugins/tauri-plugin-editor/: README.md
frontend/native/plugins/tauri-plugin-editor/.changes/: config.json  initial-release.md  readme.md
frontend/native/plugins/tauri-plugin-editor/rust/: Cargo.toml  build.rs
frontend/native/plugins/tauri-plugin-editor/rust/src/: lib.rs
frontend/native/plugins/tauri-plugin-repo-client/.changes/: config.json  initial-release.md  readme.md
frontend/native/plugins/tauri-plugin-repo-client/rust/: Cargo.toml  build.rs
frontend/native/plugins/tauri-plugin-subscriber-client/: README.md
frontend/native/plugins/tauri-plugin-subscriber-client/.changes/: config.json  initial-release.md  readme.md
frontend/native/plugins/tauri-plugin-subscriber-client/rust/: Cargo.toml  build.rs
frontend/tests/commands-tests/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wdio.conf.ts
frontend/tests/commands-tests/specs/: archive_repo.ts  aws_account_in_partition_cp.test.ts  aws_iam_policy_in_account_cp.test.ts  aws_partition_cp.test.ts  aws_partition_update.test.ts  branch_crud.test.ts  close_tauri_app.test.ts  cloud_pattern_drop_info.ts  cloud_pattern_properties_values.ts  create_branch.ts  create_folder.ts  create_repo.ts  create_test_model.ts  create_viewport.ts  double_click_cloud_pattern.ts  folder_crud.test.ts  get_cloud_patterns.ts  get_repo.ts  get_repo_branch_model_item_prop.ts  get_repo_branch_viewport_item.ts  get_resource_item_partials.ts  get_resource_item_schema.ts  get_resource_item_viewport_data.ts  get_resource_items_partials.ts  get_resource_items_viewport_data.ts  get_subscriber.ts  load_model.ts  load_token.ts  login.test.ts  mfa_login.ts  move_folder.ts  move_repo.ts  multi_tier_vpc_with_pub_priv_subnets_cp.test.ts  password_login.ts  remove_branch.ts  remove_branch_properties.ts  remove_folder.ts  remove_folder_properties.ts  remove_repo_properties.ts  remove_viewport.ts  (+20 more)
frontend/tests/commands-tests/specs/helpers/: find_folder.ts  find_repo.ts  index.ts
frontend/tests/commands-tests/specs/scripts/: account_set.ts  branch_create.ts  branch_remove.ts  branch_rename.ts  create_test_model.ts  evaluate_cloud_pattern.ts  folder_create.ts  folder_move.ts  folder_remove.ts  folder_rename.ts  get_cloud_patterns.ts  get_repo.ts  get_subscriber.ts  index.ts  load_model.ts  mfa_login.ts  model_node_upsert_properties.ts  pw_login.ts  remove_branch_properties.ts  remove_folder_properties.ts  remove_repo_properties.ts  repo_archive.ts  repo_create.ts  repo_move.ts  repo_rename.ts  resource_item_partials_get.ts  resource_item_schema_get.ts  resource_item_viewport_data_get.ts  resource_items_partials_get.ts  resource_items_viewport_data_get.ts  save_updates.ts  set_repo.ts  unload_model.ts  upsert_branch_properties.ts  upsert_folder_properties.ts  upsert_repo_properties.ts  viewport_create.ts  viewport_item_remove_properties.ts  viewport_item_upsert_properties.ts  viewport_remove.ts  (+2 more)
frontend/tests/commands-tests/src/: main.ts
frontend/tests/commands-tests/src-tauri/: Cargo.toml  tauri.conf.json
frontend/tests/commands-tests/src-tauri/capabilities/: cloudcad-repo-client.json  cloudcad-subscriber.json  default.json  process.json
frontend/tests/commands-tests/src-tauri/src/: main.rs
(+365 files in other folders)
