[workspace]
resolver = "2"

members = [
    "native/app",
    "native/plugins/tauri-plugin-repo-client/rust",
    "native/plugins/tauri-plugin-editor/rust",
    "native/plugins/tauri-plugin-subscriber-client/rust",
    "native/plugins/tauri-plugin-cognito-login/rust",
    "native/plugins/common",
    "native/plugins/tauri-plugin-cognito-sign-up/rust",
    "native/plugins/tauri-plugin-account-client/rust",
    "tests/commands-tests/src-tauri",
]

[workspace.package]
authors = ["CloudCAD.io Development Team"]
edition = "2021"
license = "CloudCAD Proprietary License"
publish = false
rust-version = "1.80"
version = "0.1.0"

[workspace.metadata]
ts_bindings_base_path = "ui/tauri-plugin-apis"

[workspace.dependencies]
anyhow = "1.0.87"
async-recursion = "*"
auth_login = { path = "../common/libs/auth/login" }
auth_secure_store = { path = "../common/libs/auth/secure-store" }
auth_signup = { path = "../common/libs/auth/signup" }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
common-aggregates = { path = "../common/aggregates" }
common-commands = { path = "../common/commands" }
common-complex-types = { path = "../common/complex-types" }
common-custom-cursor = { path = "../common/custom-cursor" }
common-custom-cursor-client = { path = "../common/libs/custom-cursor-client" }
common-dtos = { path = "../common/dtos" }
common-events = { path = "../common/events" }
common-events-player = { path = "../common/events-player" }
common-libs-account-api-client = { path = "../common/libs/account-api-client" }
common-libs-editor-api-client = { path = "../common/libs/editor-api-client" }
common-libs-repo-api-client = { path = "../common/libs/repo-api-client" }
common-libs-subscriber-api-client = { path = "../common/libs/subscriber-api-client" }
common-nmg-core = { path = "../common/nmg/core" }
common-simple-types = { path = "../common/simple-types" }
common-traits = { path = "../common/traits" }
common-wasm-components-store = { path = "../common/wasm-components-store" }
common-wasm-evaluators = { path = "../common/wasm-evaluators" }
env_logger = "0.11.5"
frontend-tauri-plugins-common = { path = "native/plugins/common" }
futures = "0.3.30"
json-patch = "2.0.0"
keyring = { version = "3.2.1", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
log = "0.4.22"
once_cell = "1.19.0"
regex = "1.10.6"
rustc-hash = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simple_logger = "5.0.0"
specta = "2.0.0-rc.20"
specta-typescript = "0.0.7"
specta-util = { version = "0.0.7", features = ["serde"] }
tauri = "2.0.0-rc.10"
tauri-build = "2.0.0-rc.9"
tauri-plugin = "2.0.0-rc.9"
tauri-plugin-account-client = { path = "native/plugins/tauri-plugin-account-client/rust" }
tauri-plugin-cognito-login = { path = "native/plugins/tauri-plugin-cognito-login/rust" }
tauri-plugin-cognito-sign-up = { path = "native/plugins/tauri-plugin-cognito-sign-up/rust" }
tauri-plugin-editor = { path = "native/plugins/tauri-plugin-editor/rust" }
tauri-plugin-repo-client = { path = "native/plugins/tauri-plugin-repo-client/rust" }
tauri-plugin-subscriber-client = { path = "native/plugins/tauri-plugin-subscriber-client/rust" }
tauri-specta = { git = "https://github.com/cloudcad/tauri-specta.git", version = "2.0.0-rc.18", features = [
    "typescript",
    "javascript",
    "derive",
] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full", "test-util"] }
uuid = { version = "1.10.0", features = ["v4"] }
verified_token = { path = "../common/libs/auth/verified_token" }
wasmtime = "23.0.2"
zeroize = { version = "1.8.1", features = ["derive"] }


cloudcad-ui2 = { path = "native/app" }


[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
strip = true
