[package]
authors.workspace = true
description = "A Tauri App"
edition.workspace = true
name = "cloudcad-ui2"
publish.workspace = true
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
serde_json.workspace = true
tauri-build.workspace = true

[dependencies]

chrono.workspace = true

env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true

tauri.workspace = true
# tauri-plugin-http.workspace = true

tauri-plugin-cognito-login.workspace = true
tauri-plugin-cognito-sign-up.workspace = true

tauri-plugin-account-client.workspace = true
tauri-plugin-editor.workspace = true
tauri-plugin-repo-client.workspace = true
tauri-plugin-subscriber-client.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [lib]
# crate-type = ["staticlib", "cdylib", "rlib"]
