[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "commands-tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri.workspace = true

cloudcad-ui2.workspace = true
tauri-plugin-account-client.workspace = true
tauri-plugin-cognito-login.workspace = true
tauri-plugin-cognito-sign-up.workspace = true
tauri-plugin-editor.workspace = true
tauri-plugin-repo-client.workspace = true
tauri-plugin-subscriber-client.workspace = true
