[package]
description = "Tauri plugin for CloudCAD repo client"
name = "tauri-plugin-repo-client"
# exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
authors.workspace = true 
edition.workspace = true 
license.workspace = true 
links = "tauri-plugin-repo-client" # This is needed so the plugin does not accidentally linked in twice
publish.workspace = true 
rust-version.workspace = true 
version.workspace = true 

[package.metadata]
ts_bindings_base_path.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
simple_logger.workspace = true

serde.workspace = true
serde_json.workspace = true
specta-typescript.workspace = true
specta-util.workspace = true
specta.workspace = true
tauri-plugin.workspace = true
tauri-specta.workspace = true
tauri.workspace = true
thiserror.workspace = true

common-complex-types.workspace = true
common-dtos.workspace = true
common-libs-repo-api-client.workspace = true
common-simple-types.workspace = true
frontend-tauri-plugins-common.workspace = true

[build-dependencies]
serde_json.workspace = true
tauri-plugin = {workspace = true, features = ["build"]}
